# qwen_coder_switch

./: .gitignore  README.md  prompt-v0.1.0.md  prompt-v0.2.0.md  prompt-v0.3.0.md  pyproject.toml
qwen_coder_switch/: api.py  cli.py  config.py  main.py  manager.py
src/: api.py  cli.py  config.py  main.py  manager.py
src/qwen_coder_switch/: constants.py  manager.py  provider.py
